bug 84017.  Added a StyleReflow to set in the history.. because endobserving document no longer generates this needed reflow for the history/content update for text fields.  r=kmcclusk@netscape.com, sr=attinasi